@@ -4,25 +4,74 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.slytechs.jnet</groupId>
 	<artifactId>core-protocols</artifactId>
-	<version>0.9-SNAPSHOT</version>
+	<version>0.9</version>
 	<name>Core Protocol Pack</name>
 	<description>Protocol and runtime support for common protocols</description>
 	<url>https://www.slytechs.com</url>
 	<properties>
 		<jdk.version>19</jdk.version>
+		<java.encoding>UTF-8</java.encoding>
 		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
 		<maven.compiler.source>${jdk.version}</maven.compiler.source>
 		<maven.compiler.target>${jdk.version}</maven.compiler.target>
-		<java.preview>--enable-preview</java.preview>
-		<java.encoding>UTF-8</java.encoding>
-		<java.native>--enable-native-access=ALL-UNNAMED</java.native>
-		<groups>user-permission</groups>
-		<excludeGroups>windows-api|unix-api|linux-api</excludeGroups>
 	</properties>
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resource</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.11.0</version>
+					<configuration>
+						<source>${jdk.version}</source>
+						<target>${jdk.version}</target>
+						<release>${jdk.version}</release>
+						<compilerArgs>
+							<arg>--enable-preview</arg>
+						</compilerArgs>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.5.0</version>
+					<configuration>
+						<sourcepath>${basedir}/src/main/java</sourcepath>
+						<show>public</show>
+						<additionalJOption>--enable-preview</additionalJOption>
+						<excludePackageNames>
+							*.internal:*.internal.*</excludePackageNames>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M7</version>
+					<configuration>
+						<skipTests>true</skipTests>
+						<trimStackTrace>true</trimStackTrace>
+						<encoding>${java.encoding}</encoding>
+						<skipAfterFailureCount>1</skipAfterFailureCount>
+						<reuseForks>true</reuseForks>
+						<groups>${groups}</groups>
+						<excludedGroups>${excludeGroups}</excludedGroups>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<licenses>
 		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<name>Sly Technology's Free License</name>
+			<url>http://www.slytechs.com/free-license-text</url>
 		</license>
 	</licenses>
 	<developers>
@@ -68,257 +117,11 @@
 		</dependency>
 
 	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/java</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-		</resources>
-		<extensions>
-			<extension>
-				<groupId>kr.motd.maven</groupId>
-				<artifactId>os-maven-plugin</artifactId>
-				<version>1.7.0</version>
-			</extension>
-		</extensions>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-					<release>${jdk.version}</release>
-					<enablePreview>true</enablePreview>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
-			</plugin>
-			<!-- Unit test the API -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M7</version>
-				<configuration>
-					<trimStackTrace>true</trimStackTrace>
-					<encoding>${java.encoding}</encoding>
-					<skipAfterFailureCount>1</skipAfterFailureCount>
-					<reuseForks>true</reuseForks>
-					<groups>${groups}</groups>
-					<excludedGroups>${excludeGroups}</excludedGroups>
-					<argLine>
-						${java.library.path.libpcap} ${java.preview}
-						${java.native}
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
-					<windowtitle>Public API for ${project.name}
-						${project.version}</windowtitle>
-					<encoding>${java.encoding}</encoding>
-					<source>${jdk.version}</source>
-					<additionalOptions>
-						${java.preview}
-					</additionalOptions>
-					<show>public</show>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-publish-plugin</artifactId>
-				<version>3.0.0</version>
-				<configuration>
-					<scmBranch>gh-pages</scmBranch>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>3.0.0-M7</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.22.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
-				<configuration>
-					<doctitle>Public API for ${project.name} ${project.version}</doctitle>
-					<windowtitle>Public API for ${project.name}
-						${project.version}</windowtitle>
-					<testDoctitle>Test API for ${project.name}
-						${project.version}</testDoctitle>
-					<testWindowtitle>Test API for ${project.name}
-						${project.version}</testWindowtitle>
-					<encoding>${java.encoding}</encoding>
-					<source>${jdk.version}</source>
-					<additionalOptions>
-						${java.preview}
-					</additionalOptions>
-				</configuration>
-				<reportSets>
-					<reportSet>
-						<id>aggregate-no-fork</id>
-						<configuration>
-							<goal>aggregate-no-fork</goal>
-							<show>public</show>
-							<skip>false</skip>
-						</configuration>
-						<reports>
-							<report>javadoc</report>
-						</reports>
-					</reportSet>
-					<reportSet>
-						<id>test-aggregate-no-fork</id>
-						<configuration>
-							<goal>test-aggregate-no-fork</goal>
-							<show>private</show>
-							<skip>true</skip>
-						</configuration>
-						<reports>
-							<report>test-javadoc</report>
-						</reports>
-					</reportSet>
-				</reportSets>
-			</plugin>
-		</plugins>
-	</reporting>
+
 	<organization>
 		<name>Sly Technologies Inc</name>
 		<url>http://slytechs.com</url>
 	</organization>
-	<profiles>
-		<profile>
-			<id>osx-homebrew</id>
-			<activation>
-				<os>
-					<family>mac</family>
-				</os>
-				<file>
-					<exists>/usr/local/Cellar/libpcap/${libpcap.version}</exists>
-				</file>
-			</activation>
-			<build></build>
-			<properties>
-				<java.library.path.libpcap.osx>
-					-Djava.library.path=/usr/local/Cellar/libpcap/${libpcap.version}/lib</java.library.path.libpcap.osx>
-				<java.library.path.libpcap>${java.library.path.libpcap.osx}</java.library.path.libpcap>
-				<excludeGroups>windows-api|linux-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>osx-macports</id>
-			<activation>
-				<os>
-					<family>mac</family>
-				</os>
-				<file>
-					<exists>/opt/local/lib/libpcap.dylib</exists>
-					<missing>/usr/local/Cellar/libpcap/${libpcap.version}/lib</missing>
-				</file>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.osx>
-					-Djava.library.path=/opt/local/lib</java.library.path.libpcap.osx>
-				<java.library.path.libpcap>${java.library.path.libpcap.osx}</java.library.path.libpcap>
-				<excludeGroups>windows-api|linux-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>linux-x86</id>
-			<activation>
-				<os>
-					<name>Linux</name>
-					<arch>x86</arch>
-				</os>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.linux>
-					-Djava.library.path=/usr/lib/x86-linux-gnu</java.library.path.libpcap.linux>
-				<java.library.path.libpcap>${java.library.path.libpcap.linux}</java.library.path.libpcap>
-				<excludeGroups>windows-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>linux-amd64</id>
-			<activation>
-				<os>
-					<name>Linux</name>
-					<arch>amd64</arch>
-				</os>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.linux64>
-					-Djava.library.path=/usr/lib/x86_64-linux-gnu</java.library.path.libpcap.linux64>
-				<java.library.path.libpcap>${java.library.path.libpcap.linux64}</java.library.path.libpcap>
-				<excludeGroups>windows-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>linux-x86_64</id>
-			<activation>
-				<os>
-					<name>Linux</name>
-					<arch>x86_64</arch>
-				</os>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.linux64>
-					-Djava.library.path=/usr/lib/x86_64-linux-gnu</java.library.path.libpcap.linux64>
-				<java.library.path.libpcap>${java.library.path.libpcap.linux64}</java.library.path.libpcap>
-				<excludeGroups>windows-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>windows-x86_64</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-					<arch>x86_64</arch>
-				</os>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.windows64>
-					-Djava.library.path="C:\\Windows\\SysWOW64"</java.library.path.libpcap.windows64>
-				<java.library.path.libpcap>
-					${java.library.path.libpcap.windows64}</java.library.path.libpcap>
-				<excludeGroups>unix-api|linux-api</excludeGroups>
-			</properties>
-		</profile>
-		<profile>
-			<id>windows-x86</id>
-			<activation>
-				<os>
-					<family>Windows</family>
-					<arch>x86</arch>
-				</os>
-			</activation>
-			<properties>
-				<java.library.path.libpcap.windows>-Djava.library.path="C:\\Windows\\Program
-					Files"</java.library.path.libpcap.windows>
-				<java.library.path.libpcap>${java.library.path.libpcap.windows}</java.library.path.libpcap>
-				<excludeGroups>unix-api|linux-api</excludeGroups>
-			</properties>
-		</profile>
-	</profiles>
 	<issueManagement>
 		<system>Github Issue Tracking</system>
 		<url>https://github.com/slytechs-repos/core-protocols/issues</url>
